修改a标签跳转链接.

--- a/Challenge.html
+++ b/Challenge.html
@@ -12,14 +12,14 @@
 					<img src="./img/logo.png" alt="" style="width: unset !important;;height: 100%;">
 				</div>
 				<ul style="width:300px;height:60px;float: left;">
-					<a style="text-decoration: none;font:400 22px/60px 'microsoft yahei';color:#fff" href="http://seretod.org">SereTOD 2022 Workshop</>
+					<a style="text-decoration: none;font:400 22px/60px 'microsoft yahei';color:#fff" href="https://future-dial.github.io/SereTOD">SereTOD 2022 Workshop</>
 				</ul>
 				<ul class="label"style="float: right;height:60px;">
-					<a style="text-decoration: none;color:#101010;font: 400 16px/60px 'microsoft yahei';" href="http://seretod.org"><li>Home</li></a>
-					<a style="text-decoration: none;color:#101010" href="http://seretod.org/Organizers.html"><li>Organizers</li></a>
-					<a style="text-decoration: none;color:#101010" href="http://seretod.org/Program.html"><li>Program</li></a>
-					<a style="text-decoration: none;color:#101010" href="http://seretod.org/Challenge.html"><li>Challenge</li></a>
-					<a style="text-decoration: none;color:#101010" href="http://seretod.org/Accepted Papers.html"><li>Accepted Papers</li></a>
+					<a style="text-decoration: none;color:#101010;font: 400 16px/60px 'microsoft yahei';" href="https://future-dial.github.io/SereTOD"><li>Home</li></a>
+					<a style="text-decoration: none;color:#101010" href="https://future-dial.github.io/SereTOD/Organizers.html"><li>Organizers</li></a>
+					<a style="text-decoration: none;color:#101010" href="https://future-dial.github.io/SereTOD/Program.html"><li>Program</li></a>
+					<a style="text-decoration: none;color:#101010" href="https://future-dial.github.io/SereTOD/Challenge.html"><li>Challenge</li></a>
+					<a style="text-decoration: none;color:#101010" href="https://future-dial.github.io/SereTOD/Accepted Papers.html"><li>Accepted Papers</li></a>
 					
 					<a style="text-decoration: none;color:#101010" href="Call%20for%20Papers.html"><li>Call for Papers</li></a>
 				</ul>
@@ -62,14 +62,14 @@ The teams can choose to participate in Track 1 or Track 2, or both.
 		</div>		
 		<div style="height: unset !important;" class="green">
 			<li style="width:100%;font:400 16px/32px 'microsoft yahei';color:#101010;padding-left: 30px;" > <span style="font:700 16px/28px 'microsoft yahei';" >Challenge Description: </span>
-			<br><a href="http://seretod.org/SereTOD_Challenge_Description_v2.1.pdf">v2.1 (Sep. 10, 2022, mainly adding Combined Score for Track 2)</a>
-			<br><a href="http://seretod.org/SereTOD_Challenge_Description_v2.0.pdf">v2.0 (July 1, 2022)</a> </li>
+			<br><a href="https://future-dial.github.io/SereTOD/SereTOD_Challenge_Description_v2.1.pdf">v2.1 (Sep. 10, 2022, mainly adding Combined Score for Track 2)</a>
+			<br><a href="https://future-dial.github.io/SereTOD/SereTOD_Challenge_Description_v2.0.pdf">v2.0 (July 1, 2022)</a> </li>
 						<li style="width:100%;font:400 16px/32px 'microsoft yahei';color:#101010;padding-left: 30px;" > <span style="font:700 16px/28px 'microsoft yahei';" >Code repository for baseline systems and evaluation scripts: </span>
 						<br><a href="https://github.com/SereTOD/SereTOD2022">https://github.com/SereTOD/SereTOD2022</a></li>
 		</div>
 		<div style="height: unset !important;" class="green">
 			<li style="width:100%;font:400 16px/32px 'microsoft yahei';color:#101010;padding-left: 30px;" > <span style="font:700 16px/28px 'microsoft yahei';" >Challenge Registration: </span> 
-			<br>Please fill the form (<a href="http://seretod.org/English_Registration_Form.docx">English form</a>, <a href="http://seretod.org/Chinese_Registration_Form.docx">Chinese form</a>) and send to seretod2022 (at) gmail (dot) com to complete the registration. Registration deadline: July 1, 2022.</li>
+			<br>Please fill the form (<a href="https://future-dial.github.io/SereTOD/English_Registration_Form.docx">English form</a>, <a href="https://future-dial.github.io/SereTOD/Chinese_Registration_Form.docx">Chinese form</a>) and send to seretod2022 (at) gmail (dot) com to complete the registration. Registration deadline: July 1, 2022.</li>
 			<li style="width:100%;font:400 16px/32px 'microsoft yahei';color:#101010;padding-left: 30px;" > <span style=" 16px/28px 'microsoft yahei';" >You are welcome to scan the following QR code to join the WeChat group (in Chinese), where we will distribute messages relevant to the Challenge.</li>
 			<p style="display: flex; justify-content: center;">
 				<img src="./img/ewm.png" style="width: 100px;">
@@ -89,7 +89,7 @@ The teams can choose to participate in Track 1 or Track 2, or both.
 				</h1>
 		</div>
 		<div class="green" style="height: unset !important;">
-			<p style="width:100%;font:400 16px/32px 'microsoft yahei';color:#101010;text-align:center;" > Please refer to <a href="http://seretod.org/index.html#Important">here</a>! </p>
+			<p style="width:100%;font:400 16px/32px 'microsoft yahei';color:#101010;text-align:center;" > Please refer to <a href="https://future-dial.github.io/SereTOD/index.html#Important">here</a>! </p>
 		</div>	
 		</div>
 		<div class="font_title">
