--- a/Panel.html
+++ b/Panel.html
@@ -20,23 +20,23 @@
 				</div>
 				<ul style="width:300px;height:60px;float: left;">
 					<a style="text-decoration: none;font:400 22px/60px 'microsoft yahei';color:#fff"
-						href="http://seretod.org">SereTOD 2022 Workshop</>
+						href="https://future-dial.github.io/SereTOD">SereTOD 2022 Workshop</>
 				</ul>
 				<ul class="label" style="float: right;height:60px;text-align:right;">
 					<a style="text-decoration: none;color:#101010;font: 400 16px/60px 'microsoft yahei';"
-						href="http://seretod.org">
+						href="https://future-dial.github.io/SereTOD">
 						<li>Home</li>
 					</a>
-					<a style="text-decoration: none;color:#101010" href="http://seretod.org/Organizers.html">
+					<a style="text-decoration: none;color:#101010" href="https://future-dial.github.io/SereTOD/Organizers.html">
 						<li>Organizers</li>
 					</a>
-					<a style="text-decoration: none;color:#101010" href="http://seretod.org/Program.html">
+					<a style="text-decoration: none;color:#101010" href="https://future-dial.github.io/SereTOD/Program.html">
 						<li>Program</li>
 					</a>
-					<a style="text-decoration: none;color:#101010" href="http://seretod.org/Challenge.html">
+					<a style="text-decoration: none;color:#101010" href="https://future-dial.github.io/SereTOD/Challenge.html">
 						<li>Challenge</li>
 					</a>
-					<a style="text-decoration: none;color:#101010" href="http://seretod.org/Accepted Papers.html">
+					<a style="text-decoration: none;color:#101010" href="https://future-dial.github.io/SereTOD/Accepted Papers.html">
 						<li>Accepted Papers</li>
 					</a>
 					
