--- a/Program.html
+++ b/Program.html
@@ -61,14 +61,14 @@
 					<img src="./img/logo.png" alt="" style="width: unset !important;;height: 100%;">
 				</div>
 				<ul style="width:300px;height:60px;float: left;">
-					<a style="text-decoration: none;font:400 22px/60px 'microsoft yahei';color:#fff" href="http://seretod.org">SereTOD 2022 Workshop</>
+					<a style="text-decoration: none;font:400 22px/60px 'microsoft yahei';color:#fff" href="https://future-dial.github.io/SereTOD">SereTOD 2022 Workshop</>
 				</ul>
 				<ul class="label"style="float: right;height:60px;">
-					<a style="text-decoration: none;color:#101010;font: 400 16px/60px 'microsoft yahei';" href="http://seretod.org"><li>Home</li></a>
-					<a style="text-decoration: none;color:#101010" href="http://seretod.org/Organizers.html"><li>Organizers</li></a>
-					<a style="text-decoration: none;color:#101010" href="http://seretod.org/Program.html"><li>Program</li></a>
-					<a style="text-decoration: none;color:#101010" href="http://seretod.org/Challenge.html"><li>Challenge</li></a>
-					<a style="text-decoration: none;color:#101010" href="http://seretod.org/Accepted Papers.html"><li>Accepted Papers</li></a>
+					<a style="text-decoration: none;color:#101010;font: 400 16px/60px 'microsoft yahei';" href="https://future-dial.github.io/SereTOD"><li>Home</li></a>
+					<a style="text-decoration: none;color:#101010" href="https://future-dial.github.io/SereTOD/Organizers.html"><li>Organizers</li></a>
+					<a style="text-decoration: none;color:#101010" href="https://future-dial.github.io/SereTOD/Program.html"><li>Program</li></a>
+					<a style="text-decoration: none;color:#101010" href="https://future-dial.github.io/SereTOD/Challenge.html"><li>Challenge</li></a>
+					<a style="text-decoration: none;color:#101010" href="https://future-dial.github.io/SereTOD/Accepted Papers.html"><li>Accepted Papers</li></a>
 					
 					<a style="text-decoration: none;color:#101010" href="Call%20for%20Papers.html"><li>Call for Papers</li></a>
 				</ul>
@@ -161,7 +161,7 @@
 					</tr><tr>
 						<td>13:50-14:30</td>
 						<td>17:50-18:30</td>
-						<td><a href="http://seretod.org/Panel.html">Panel (40 min)</a></td>
+						<td><a href="https://future-dial.github.io/SereTOD/Panel.html">Panel (40 min)</a></td>
 					</tr><tr>
 						<td>14:30</td>
 						<td>18:30</td>
